--- a/package.json
+++ b/package.json
@@ -5,27 +5,28 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "start":"nodemon app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "mongoose": "^5.7.3",
     "nodemon": "^1.19.2"
   },
   "devDependencies": {
     "eslint": "^6.4.0"
   },
-  "nodemonConfig":{
-    "restartable":"rs",
-    "ignore":[
+  "nodemonConfig": {
+    "restartable": "rs",
+    "ignore": [
       "node_modules/**/node_modules"
     ],
-    "delay":"2500",
-    "env":{
-      "NODE_ENV":"development",
-      "PORT":4000
+    "delay": "2500",
+    "env": {
+      "NODE_ENV": "development",
+      "PORT": 4000
     }
   }
 }
